--- a/CSS-My Site/index.html
+++ b/CSS-My Site/index.html
@@ -5,6 +5,7 @@
         <title>Ajay Martin Daniel</title>
         <link rel="stylesheet" href="CSS/styles.css">
         <link rel="icon" href="favicon.ico">
+        scrolling="smooth"
     </head>
     <body>
         <div class="top">
